test/corpus/declaration.txt
==================
Integer declaration
==================

local a = 123 // decimal
local b = 0x0012 //hexadecimal
local e = 123_456 // underscores may be used to visually sepearate digit groups
local f = 0xAB_CD_01_23 // also underscores

---

(source_file
  (local_statement
    (identifier)
    (integer))
  (comment)
  (local_statement
    (identifier)
    (integer))
  (comment)
  (local_statement
    (identifier)
    (integer))
  (comment)
  (local_statement
    (identifier)
    (integer))
  (comment))

==================
Float declaration
==================

local a = 1.0
local b = 0.234
local c = 6.5e-11 //exponential notation
local d = 12.345_67e+2 // digit group separators

---

(source_file
  (local_statement
    (identifier)
    (float))
  (local_statement
    (identifier)
    (float))
  (local_statement
    (identifier)
    (float))
  (comment)
  (local_statement
    (identifier)
    (float))
  (comment))

==================
Multiple local declaration
==================

local a = 10, b = 20;
local c = 10, d = 20

---

(source_file
  (local_statement
    (identifier)
    (integer)
    (identifier)
    (integer))
  (empty_statement)
  (local_statement
    (identifier)
    (integer)
    (identifier)
    (integer)))

==================
Simple string declaration
==================

let a = ""
let b = "I'm a wonderful string\n {This is nothing special}"

---

(source_file
  (let_statement
    (identifier)
    (string
      (simple_string)))
  (let_statement
    (identifier)
    (string
      (simple_string
        (escape_sequence)))))

==================
Interpolated string declaration
==================

let c = $""
let d = $"a = {a}"

---

(source_file
  (let_statement
    (identifier)
    (string
      (interpolated_string)))
  (let_statement
    (identifier)
    (string
      (interpolated_string
        (interpolation
          (identifier))))))

==================
Verbatim string declaration
==================

let e = @""
let f = @"
  this is a multiline string
  it will ""embed"" all the new line
  characters
"

---

(source_file
  (let_statement
    (identifier)
    (string
      (verbatim_string)))
  (let_statement
    (identifier)
    (string
      (verbatim_string))))

==================
Array declaration
==================

let a = []
let b = [0]
let c = [123, "string", "", 2.0]

---

(source_file
  (let_statement
    (identifier)
    (array))
  (let_statement
    (identifier)
    (array
      (integer)))
  (let_statement
    (identifier)
    (array
      (integer)
      (string
        (simple_string))
      (string
        (simple_string))
      (float))))

==================
Table declaration
==================

let data = 123
let a = {}
let b = {
  test1 = 1234
  deleteme = "now"
}

let c = { a, b, data }

let a = {
  [1]="I'm the value"
}

let x = {
  "id": 1,
  "name": "Foo",
  "price": 123,
  "tags": ["Bar","Eek"]
}

---

(source_file
  (let_statement
    (identifier)
    (integer))
  (let_statement
    (identifier)
    (table))
  (let_statement
    (identifier)
    (table
      (identifier)
      (integer)
      (identifier)
      (string
        (simple_string))))
  (let_statement
    (identifier)
    (table
      (identifier)
      (identifier)
      (identifier)))
  (let_statement
    (identifier)
    (table
      (integer)
      (string
        (simple_string))))
  (let_statement
    (identifier)
    (table
      (string
        (simple_string))
      (integer)
      (string
        (simple_string))
      (string
        (simple_string))
      (string
        (simple_string))
      (integer)
      (string
        (simple_string))
      (array
        (string
          (simple_string))
        (string
          (simple_string))))))

==================
Class declaration
==================

class Foo {
  //constructor
  constructor(a) {
      this.testy = ["stuff",1,2,3,a]
  }
  //member function
  function PrintTesty() {
      foreach(i,val in this.testy) {
          print("idx = "+i+" = "+val)
      }
  }
  //property
  testy = null
}

---

(source_file
  (class_statement
    (identifier)
    (comment)
    (constructor
      (param
        (identifier))
      (block
        (expression_statement
          (assignment
            (deref_expression
              (identifier)
              (identifier))
            (array
              (string
                (simple_string))
              (integer)
              (integer)
              (integer)
              (identifier))))))
    (comment)
    (function
      (identifier)
      (block
        (foreach_statement
          (identifier)
          (identifier)
          (deref_expression
            (identifier)
            (identifier))
          (block
            (expression_statement
              (call_expression
                (identifier)
                (add
                  (add
                    (add
                      (string
                        (simple_string))
                      (identifier))
                    (string
                      (simple_string)))
                  (identifier))))))))
    (comment)
    (identifier)
    (null)))

==================
Class static members
==================

class Foo {
  constructor() {
      //..stuff
  }
  name = "normal variable"
  //static variable
  static classname = "The class name is foo"
};

---

(source_file
  (class_statement
    (identifier)
    (constructor
      (block
        (comment)))
    (identifier)
    (string
      (simple_string))
    (comment)
    (identifier)
    (string
      (simple_string)))
  (empty_statement))

==================
Class inheritance
==================

class Foo {
  function DoSomething() {
      println("I'm the base")
  }
};

class SuperFoo(Foo) {
  //overridden method
  function DoSomething() {
      //calls the base method
      base.DoSomething()
      println("I'm doing something")
  }
}

---

(source_file
  (class_statement
    (identifier)
    (function
      (identifier)
      (block
        (expression_statement
          (call_expression
            (identifier)
            (string
              (simple_string)))))))
  (empty_statement)
  (class_statement
    (identifier)
    (identifier)
    (comment)
    (function
      (identifier)
      (block
        (comment)
        (expression_statement
          (call_expression
            (deref_expression
              (identifier)
              (identifier))))
        (expression_statement
          (call_expression
            (identifier)
            (string
              (simple_string))))))))

==================
Block
==================

local a

{
  let b = 2+3
  a = b
}

---

(source_file
  (local_statement
    (identifier))
  (block
    (let_statement
      (identifier)
      (add
        (integer)
        (integer)))
    (expression_statement
      (assignment
        (identifier)
        (identifier)))))

==================
Function
==================

function() {}
function f(x) { return x }
function g(x, ...) { return x }
function [pure] test(a, b) { return a + b }

---

(source_file
  (expression_statement
    (function
      (block)))
  (expression_statement
    (function
      (identifier)
      (param
        (identifier))
      (block
        (return
          (identifier)))))
  (expression_statement
    (function
      (identifier)
      (param
        (identifier))
      (variadic_param)
      (block
        (return
          (identifier)))))
  (expression_statement
    (function
      (attributes
        (attribute))
      (identifier)
      (param
        (identifier))
      (param
        (identifier))
      (block
        (return
          (add
            (identifier)
            (identifier)))))))

==================
Lambda
==================

let h = @(x, y) x + y
@[pure](a, b) a + b

---

(source_file
  (let_statement
    (identifier)
    (lambda
      (param
        (identifier))
      (param
        (identifier))
      (add
        (identifier)
        (identifier))))
  (expression_statement
    (lambda
      (attributes
        (attribute))
      (param
        (identifier))
      (param
        (identifier))
      (add
        (identifier)
        (identifier)))))

==================
Ternary
==================

let a = data.t == 1 ? data.first : data.second

---

(source_file
  (let_statement
    (identifier)
    (ternary_expression
      (equal
        (deref_expression
          (identifier)
          (identifier))
        (integer))
      (deref_expression
        (identifier)
        (identifier))
      (deref_expression
        (identifier)
        (identifier)))))
