test/corpus/statements.txt
==================
if statement
==================

local a = 1;

if (a > 1)
  a--
else if (a < 1)
  a++
else {
  a = 10
}

---

(source_file
  (local_statement
    (identifier)
    (integer))
  (empty_statement)
  (if_statement
    (gt
      (identifier)
      (integer))
    (expression_statement
      (unary_expression
        (identifier)))
    (else_statement
      (if_statement
        (lt
          (identifier)
          (integer))
        (expression_statement
          (unary_expression
            (identifier)))
        (else_statement
          (expression_statement
            (table
              (identifier)
              (integer))))))))

==================
while statement
==================

while ( a < n ) a+=1

while(1) {
  if ( a < 0 ) break;
  a -= 1;
}

---

(source_file
  (while_statement
    (lt
      (identifier)
      (identifier))
    (expression_statement
      (compound_assignment
        (identifier)
        (integer))))
  (while_statement
    (integer)
    (block
      (if_statement
        (lt
          (identifier)
          (integer))
        (break))
      (empty_statement)
      (expression_statement
        (compound_assignment
          (identifier)
          (integer)))
      (empty_statement))))

==================
do-while statement
==================

local a=0
do {
  println(a)
  a += 1
} while(a > 100)

---

(source_file
  (local_statement
    (identifier)
    (integer))
  (do_while_statement
    (block
      (expression_statement
        (call_expression
          (identifier)
          (identifier)))
      (expression_statement
        (compound_assignment
          (identifier)
          (integer))))
    (gt
      (identifier)
      (integer))))

==================
switch statement (deprecated)
==================

switch (dataType) {
  case "null":
    return "__null"
  case "bool":
  case "integer":
  case "float":
  case "string":
    return data
  case "array":
  case "table":
    logerr("table unsupported yet")
    return "04"
  case "DataBlock":
    blk.setFrom(data)
    blk.__datablock <- true
    return "999"
  default:
    return "__unsupported"
}

---

(source_file
  (switch_statement
    (identifier)
    (case_statement
      (string
        (simple_string))
      (return
        (string
          (simple_string))))
    (case_statement
      (string
        (simple_string)))
    (case_statement
      (string
        (simple_string)))
    (case_statement
      (string
        (simple_string)))
    (case_statement
      (string
        (simple_string))
      (return
        (identifier)))
    (case_statement
      (string
        (simple_string)))
    (case_statement
      (string
        (simple_string))
      (expression_statement
        (call_expression
          (identifier)
          (string
            (simple_string))))
      (return
        (string
          (simple_string))))
    (case_statement
      (string
        (simple_string))
      (expression_statement
        (call_expression
          (deref_expression
            (identifier)
            (identifier))
          (identifier)))
      (expression_statement
        (member_assignment
          (deref_expression
            (identifier)
            (identifier))
          (boolean)))
      (return
        (string
          (simple_string))))
    (default_statement
      (return
        (string
          (simple_string))))))

==================
for statement
==================

for (local a=0;a<10;a+=1)
  println(a)

glob <- null
for (glob=0;glob<10;glob+=1) {
  println(glob)
}

for (;;) {
  println("loops forever")
}

---

(source_file
  (for_statement
    (local_statement
      (identifier)
      (integer))
    (lt
      (identifier)
      (integer))
    (compound_assignment
      (identifier)
      (integer))
    (expression_statement
      (call_expression
        (identifier)
        (identifier))))
  (expression_statement
    (member_assignment
      (identifier)
      (null)))
  (for_statement
    (assignment
      (identifier)
      (integer))
    (lt
      (identifier)
      (integer))
    (compound_assignment
      (identifier)
      (integer))
    (block
      (expression_statement
        (call_expression
          (identifier)
          (identifier)))))
  (for_statement
    (block
      (expression_statement
        (call_expression
          (identifier)
          (string
            (simple_string)))))))

==================
foreach statement
==================

let a=[10,23,33,41,589,56]
foreach (idx, val in a)
  println($"index={idx} value={val}")

foreach (val in a)
  println ($"value={val}")

---

(source_file
  (let_statement
    (identifier)
    (array
      (integer)
      (integer)
      (integer)
      (integer)
      (integer)
      (integer)))
  (foreach_statement
    (identifier)
    (identifier)
    (identifier)
    (expression_statement
      (call_expression
        (identifier)
        (string
          (interpolated_string
            (interpolation
              (identifier))
            (interpolation
              (identifier)))))))
  (foreach_statement
    (identifier)
    (identifier)
    (expression_statement
      (call_expression
        (identifier)
        (string
          (interpolated_string
            (interpolation
              (identifier))))))))

==================
yeld statement
==================

function geny(n) {
  for (local i=1; i<=n; ++i)
    yield i
  return null
}

let gtor = geny(10)
for (local x=resume gtor; x; x=resume gtor)
  print(x+"\n")

---

(source_file
  (expression_statement
    (function
      (identifier)
      (param
        (identifier))
      (block
        (for_statement
          (local_statement
            (identifier)
            (integer))
          (lteq
            (identifier)
            (identifier))
          (unary_expression
            (identifier))
          (expression_statement
            (identifier)))
        (expression_statement
          (identifier))
        (return
          (null)))))
  (let_statement
    (identifier)
    (call_expression
      (identifier)
      (integer)))
  (for_statement
    (local_statement
      (identifier)
      (resume_expression
        (identifier)))
    (identifier)
    (assignment
      (identifier)
      (resume_expression
        (identifier)))
    (expression_statement
      (call_expression
        (identifier)
        (add
          (identifier)
          (string
            (simple_string
              (escape_sequence))))))))
